-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
Qt Creator 12.0.0
-
-
3a8314f79 (12.0)
If emsdk is installed in a path with space in it, Qt Creator does not seem to recognize it when entered into the WebAssembly settings.
- resulted in
-
QTBUG-120050 Configuring a CMake-based Qt WASM project fails if emsdk path has spaces
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29981 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524815,1 | WebAssembly: Support emsdk path with spaces on Linux/macOS | 12.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
524822,3 | WebAssembly: Support emsdk path with spaces on Linux/macOS | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |