WebAssembly: Support emsdk path with spaces on Linux/macOS

The command passed to bash as argument needs to be quoted.

Task-number: QTCREATORBUG-29981
Change-Id: I0e91ab4c088f8cd4e5a2df82604ea86cf73369fc
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>